//
//  ViewModel.swift
//  ViewTestingSample
//
//  Created by Yusuke Hasegawa on 2021/07/21.
//

import Foundation

class ViewModel: ObservableObject {
    @Published var text: String = ""
}
